k8s/namespaces/base/network-system/echo-server/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-server
  namespace: network-system
  labels:
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echoserver
      version: v1
  template:
    metadata:
      labels:
        app: echoserver
        version: v1
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - name: echoserver
        image: haiut/echoserver:latest
        resources:
          requests:
            cpu: "100m"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
