k8s/namespaces/base/network-system/echo-server/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: echo-server
  namespace: network-system
  labels:
    app: echoserver
spec:
  ports:
  - port: 8080
    name: https
  selector:
    app: echoserver
