k8s/namespaces/base/network-system/echo-server/virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: echo-server
  namespace: network-system
  annotations:
    external-dns.alpha.kubernetes.io/target: '${CLUSTER_DOMAIN}'
    external-dns.alpha.kubernetes.io/external: 'true'
spec:
  hosts:
    - 'echo.${CLUSTER_DOMAIN}'
  gateways:
    - istio-ingress/istio-ingressgateway
  http:
    - match:
        - uri:
            prefix: '/'
      route:
        - destination:
            port:
              number: 8080
            host: echo-server.network-system.svc.cluster.local
